# powerline-claude

./: .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  README.md  cliff.toml
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml  release.yml
docs/themes/synthwave/: theme.yaml
plugin/.claude-plugin/: plugin.json
plugin/commands/: configure.md
src/: cli.rs  lib.rs  main.rs  payload.rs  progress.rs  render.rs  segments.rs  theme.rs
tests/: docs.rs  payload.rs  progress.rs  render.rs  run.rs  segments.rs  theme.rs
tests/fixtures/: full.json  minimal.json
