[package]
name = "powerline-claude"
version = "0.1.0"
edition = "2024"
description = "Powerline-style status line for Claude Code"
license = "AGPL-3.0-only"

[lib]
name = "powerline_claude"
path = "src/lib.rs"

[[bin]]
name = "powerline-claude"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"

[profile.release]
strip = true
lto = true
