[package]
name = "powerline-claude"
version = "0.1.0"
edition = "2024"
description = "Powerline-style status line for Claude Code"
license = "AGPL-3.0-only"
authors = ["powerline-claude contributors"]
readme = "README.md"
repository = "https://github.com/bcmyguest/powerline-claude"
homepage = "https://github.com/bcmyguest/powerline-claude"
documentation = "https://github.com/bcmyguest/powerline-claude#readme"
keywords = ["claude-code", "statusline", "powerline", "claude", "terminal"]
categories = ["command-line-utilities", "development-tools"]
exclude = ["docs/", "plugin/", ".claude-plugin/", ".github/", "cliff.toml", ".pre-commit-config.yaml"]

[lib]
name = "powerline_claude"
path = "src/lib.rs"

[[bin]]
name = "powerline-claude"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_norway = "0.9.42"

[dev-dependencies]
tempfile = "3"

[profile.release]
strip = true
lto = true
